# downmix-renderer-7.1-windows-prodcution

./: .gitignore  README.md  renderer_app.py
downmix-renderer-research/: README.md  ROUTE_TRUTH_REPORT.md  pyproject.toml  renderer_app.spec
downmix-renderer-research/downmix_renderer/: __init__.py  app.py  constants.py  devices.py  dsp.py  matrix.py  presets.py  settings.py  startup.py  volume.py
downmix-renderer-research/reference/: renderer_app_original.spec
downmix-renderer-research/scripts/: probe_route.py
downmix-renderer-research/tests/: test_dsp.py
downmix_renderer/: audio_engine.py  route_probe.py
reference/: renderer_app_original.py
scripts/: make_icon.py
tests/: test_presets.py
