[project]
name = "downmix-renderer-research"
version = "0.1.0"
description = "Windows 9.1.6 downmix renderer research build"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "sounddevice",
    "PyQt5",
]

[project.optional-dependencies]
volume-pycaw = [
    "pycaw",
    "comtypes",
]
build = [
    "Pillow",
    "pyinstaller",
]
test = []

[tool.pyright]
typeCheckingMode = "basic"
